Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4131

Changelog TRUNC flag is missing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0, Lustre 2.5.2
    • Lustre 2.4.0
    • Single node test system running 2.4.0
    • 3
    • 11184

      Relates to LU-2298

      It seems that changelog is not logging file truncates. I've not tested 2.4.1 but when I do I'll update this.

      [root@coolermaster lustre]# dd if=/dev/zero of=truncate bs=1M count=10
      10+0 records in
      10+0 records out
      

      Results

      7269327 01CREAT 00:36:19.512971520 2013.10.22 0x0 t=[0x200000bde:0x103e8:0x0] p=[0x200000007:0x1:0x0] truncate
      7269328 11CLOSE 00:36:19.543968971 2013.10.22 0x242 t=[0x200000bde:0x103e8:0x0]
      

      Truncate (Reduce)

      truncate -s -1000 truncate
      

      Results

      7269329 14SATTR 00:36:39.677314618 2013.10.22 0xe t=[0x200000bde:0x103e8:0x0]
      7269330 11CLOSE 00:36:39.678314537 2013.10.22 0x42 t=[0x200000bde:0x103e8:0x0]
      

      Truncate

      {extend}
      truncate -s +1000 truncate
      

      Results

      7269331 14SATTR 00:36:54.378106399 2013.10.22 0xe t=[0x200000bde:0x103e8:0x0]
      7269332 11CLOSE 00:36:54.379106360 2013.10.22 0x42 t=[0x200000bde:0x103e8:0x0]
      

      Possibly the wrong flag 'SATTR' is being sent here, as when I reduce the mask down to just TRUNC flag nothing comes through at all.

      -cf

            utopiabound Nathaniel Clark
            cfaber#1 Colin Faber [X] (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: